# pgn-analyzer

./: .gitignore  Cargo.toml  index.html
src/: components.rs  main.rs
src/components/: app.rs  board.rs  piece.rs
